[Example]support Inception-v3 model for image classification

--- a/examples/mobilenet/camera.html
+++ b/examples/mobilenet/camera.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>WebML MobileNet Camera Demo</title>
+    <title>WebML Inception_V3 Camera Demo</title>
     <link rel="stylesheet" href="../third_party/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       video {
@@ -26,7 +26,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
-      <span class="navbar-brand mb-0 h1">WebML MobileNet Demo</span>
+      <span class="navbar-brand mb-0 h1">WebML Inception_V3 Demo</span>
       <div class="btn-group">
           <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Setting...
@@ -96,7 +96,7 @@
         </div>
       </div>
     </div>
-    <canvas id="canvas" width=224 height=224></canvas>
+    <canvas id="canvas" width=299 height=299></canvas>
     <script src="../third_party/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -106,7 +106,7 @@
     <script src="./flatbuffers/js/flatbuffers.js"></script>
     <script src="./schema/schema_generated.js"></script>
     <script src="TfLiteModelUtils.js"></script>
-    <script src="MobileNet.js"></script>
+    <script src="Inception_V3.js"></script>
     <script src="utils.js"></script>
     <script src="camera.js"></script>
     <script>
