--- a/examples/ssd_mobilenet/camera.html
+++ b/examples/ssd_mobilenet/camera.html
@@ -72,13 +72,13 @@
     <script src="../third_party/stats.min.js"></script>
     <script src="../../dist/webml-polyfill.js"></script>
     <script src="../util/base.js"></script>
-    <script src="../mobilenet/flatbuffers/js/flatbuffers.js"></script>
-    <script src="../mobilenet/schema/schema_generated.js"></script>
-    <script src="../mobilenet/TfLiteModelUtils.js"></script>
+    <script src="../image_classification_tflite/flatbuffers/js/flatbuffers.js"></script>
+    <script src="../image_classification_tflite/schema/schema_generated.js"></script>
+    <script src="../image_classification_tflite/TfLiteModelUtils.js"></script>
     <script src="SsdMobileNet.js"></script>
     <script src="DrawOutputs.js"></script>
     <script src="utils.js"></script>
-    <script src="../mobilenet/camera.js"></script>
+    <script src="camera.js"></script>
     <script>
       window.onload = function() {
         main();
