[Example] Code refactor for image_classification_tflite  #278

--- a/examples/image_classification_tflite/index.html
+++ b/examples/image_classification_tflite/index.html
@@ -41,11 +41,7 @@
         <button id="selectModel" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Setting...
         </button>
-        <div class="dropdown-menu dropdown-menu-right">
-          <button class="dropdown-item disabled" type="button" id="Mobilenet_V1">Mobilenet_V1</button>
-          <button class="dropdown-item disabled" type="button" id="Mobilenet_V2">Mobilenet_V2</button>
-          <button class="dropdown-item disabled" type="button" id="Inception_V3">Inception_V3</button>
-          <button class="dropdown-item disabled" type="button" id="Squeezenet">Squeezenet</button>
+        <div class="dropdown-menu dropdown-menu-right available-models">
         </div>
       </div>
     </nav>
