--- a/examples/image_classification_tflite/camera.html
+++ b/examples/image_classification_tflite/camera.html
@@ -41,11 +41,7 @@
         <button id="selectModel" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Setting...
         </button>
-        <div class="dropdown-menu dropdown-menu-right">
-          <button class="dropdown-item disabled" type="button" id="Mobilenet_V1">Mobilenet_V1</button>
-          <button class="dropdown-item disabled" type="button" id="Mobilenet_V2">Mobilenet_V2</button>
-          <button class="dropdown-item disabled" type="button" id="Inception_V3">Inception_V3</button>
-          <button class="dropdown-item disabled" type="button" id="Squeezenet">Squeezenet</button>
+        <div class="dropdown-menu dropdown-menu-right available-models">
         </div>
       </div>
     </nav>
@@ -119,10 +115,10 @@
     <script src="TfLiteModelUtils.js"></script>
     <script src="ImageClassificationModel.js"></script>
     <script src="utils.js"></script>
-    <script src="camera.js"></script>
+    <script src="main.js"></script>
     <script>
       window.onload = function() {
-        main();
+        main('camera');
       }
     </script>
   </body>
