[Example] Rename Squeezenet to Image Classification Onnx
Fix #278

--- a/examples/image_classification_onnx/index.html
+++ b/examples/image_classification_onnx/index.html
@@ -2,11 +2,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>WebML Image Classification Camera Demo</title>
+    <title>WebML Image Classification Demo</title>
     <link rel="stylesheet" href="../third_party/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
-      video {
-        max-height: 360px;
+      img {
+        max-height: 400px;
       }
       canvas {
         display: none;
@@ -28,22 +28,22 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
       <span class="navbar-brand mb-0 h1">WebML Image Classification Demo</span>
       <div class="btn-group">
-          <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Setting...
-          </button>
-          <div class="dropdown-menu dropdown-menu-right">
-            <button class="dropdown-item disabled" type="button" id="wasm">WASM</button>
-            <button class="dropdown-item disabled" type="button" id="webgl">WebGL2</button>
-            <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
-          </div>
+        <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Setting...
+        </button>
+        <div class="dropdown-menu dropdown-menu-right">
+          <button class="dropdown-item disabled" type="button" id="wasm">WASM</button>
+          <button class="dropdown-item disabled" type="button" id="webgl">WebGL2</button>
+          <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
         </div>
-        <div class="btn-group" style="margin-left: 10px;">
-          <button id="selectModel" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Setting...
-          </button>
-          <div class="dropdown-menu dropdown-menu-right available-models">
-          </div>
+      </div>
+      <div class="btn-group" style="margin-left: 10px;">
+        <button id="selectModel" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Setting...
+        </button>
+        <div class="dropdown-menu dropdown-menu-right available-models">
         </div>
+      </div>
     </nav>
     <div class="container" id="container">
       <div id="progressContainer">
@@ -61,8 +61,23 @@
         </div>
       </div>
       <div class="row top-margin">
-        <div class="col-12" align="center">
-          <video id="video" autoplay playsinline></video>
+        <div class="col">
+        </div>
+        <div class="col-8" align="center">
+          <img id="image" crossorigin="anonymous" class="img-fluid" alt="Responsive image" src="./img/bee_eater.jpg">
+        </div>
+        <div class="col">
+        </div>
+      </div>
+      <div class="row top-margin">
+        <div class="col">
+        </div>
+        <div class="col" align="center">
+            <label id="button" class="btn btn-primary disabled">
+                Pick Image <input type="file" id="input" accept="image/*" hidden disabled>
+            </label>
+        </div>
+        <div class="col">
         </div>
       </div>
       <div class="row">
@@ -99,27 +114,25 @@
                 </tbody>
               </table>
         </div>
-        <div class="col">
-        </div>
+        <div class="col"></div>
       </div>
     </div>
     <canvas id="canvas" width=224 height=224></canvas>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="../third_party/stats.min.js"></script>
     <script src="../../dist/webml-polyfill.js"></script>
-    <script src="../util/base.js"></script>
     <script src="../third_party/protobuf.min.js"></script>
+    <script src="../util/base.js"></script>
     <script src="onnx.js"></script>
     <script src="utils.js"></script>
     <script src="OnnxModelUtils.js"></script>
-    <script src="SqueezeNet.js"></script>
+    <script src="OnnxModelImporter.js"></script>
     <script src="main.js"></script>
     <script>
-      window.onload = function() {
-        main('camera');
-      }
+     window.onload = function() {
+      main();
+    }
     </script>
   </body>
 </html>
