[Example] Reduce overhead in pre-/post- processing

--- a/examples/deeplab/index.html
+++ b/examples/deeplab/index.html
@@ -11,6 +11,7 @@
       .seg-map {
         position: absolute;
         max-width: 100%;
+        opacity: 0.8;
       }
       .image-wrapper {
         max-height: 513px !important;
@@ -84,7 +85,6 @@
     <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../../dist/webml-polyfill.js"></script>
-    <script src="../posenet/src/helperFunc.js"></script>
     <script src="../util/base.js"></script>
     <script src="../image_classification_tflite/flatbuffers/js/flatbuffers.js"></script>
     <script src="../image_classification_tflite/schema/schema_generated.js"></script>
