code refactor for prefer switch

--- a/examples/posenet/camera.html
+++ b/examples/posenet/camera.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="btn-group prefer" style="margin-left: 5px; display: none;">
-          <button id="selectPrefer" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" data-prefer="sustained" aria-haspopup="true" aria-expanded="false">
+          <button id="selectPrefer" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Setting...
           </button>
           <div class="dropdown-menu dropdown-menu-right preference">
