[Example] Combining image_classification_tflite and image_classification_onnx / Support more ONNX models

--- a/examples/image_classification/camera.html
+++ b/examples/image_classification/camera.html
@@ -115,12 +115,16 @@
     <script src="../third_party/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../third_party/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../third_party/stats.min.js"></script>
+    <script src="../third_party/protobuf.min.js"></script>
     <script src="../../dist/webml-polyfill.js"></script>
     <script src="../util/base.js"></script>
-    <script src="./flatbuffers/js/flatbuffers.js"></script>
-    <script src="./schema/schema_generated.js"></script>
-    <script src="TfLiteModelUtils.js"></script>
-    <script src="ImageClassificationModel.js"></script>
+    <script src="../util/tflite/flatbuffers/js/flatbuffers.js"></script>
+    <script src="../util/tflite/schema/schema_generated.js"></script>
+    <script src="../util/tflite/TfLiteModelUtils.js"></script>
+    <script src="../util/tflite/TFliteModelImporter.js"></script>
+    <script src="../util/onnx/onnx.js"></script>
+    <script src="../util/onnx/OnnxModelUtils.js"></script>
+    <script src="../util/onnx/OnnxModelImporter.js"></script>
     <script src="utils.js"></script>
     <script src="main.js"></script>
     <script>
