[DeepLab] Add BG replacement & guided filter

--- a/examples/deeplab/camera.html
+++ b/examples/deeplab/camera.html
@@ -50,12 +50,19 @@
       <div class="row top-margin">
         <div class="col-md-12 col-lg-8 offset-lg-2" align="center">
           <div class="image-wrapper">
-            <canvas id="output"></canvas>
+            <canvas id="output" width="448" height="448"></canvas>
             <video id="video" autoplay playsinline></video>
           </div>
         </div>
 
-        <div class="col-lg-2 offset-lg-0 col-md-4 offset-md-4 controls" data-select="blur">
+        <div class="order-lg-2 col-md-12 col-lg-8 offset-lg-2" align="center">
+          <div class="row">
+            <div id="inferenceTime" class="col" align="center">
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-2 offset-lg-0 col-sm-6 offset-sm-3 col-8 offset-2 controls" data-select="blur">
 
           <div class="row">
             <div class="label">
@@ -63,11 +70,14 @@
             </div> 
             <div class="btn-group btn-group-toggle btn-group-sm effects-select" data-toggle="buttons">
               <label class="btn btn-secondary">
-                <input type="radio" value="label" autocomplete="off" checked> LABEL
+                <input type="radio" value="label" autocomplete="off" checked> MAP
               </label>
               <label class="btn btn-secondary">
                 <input type="radio" value="fill" autocomplete="off"> FILL
               </label>
+              <label class="btn btn-secondary">
+                  <input type="radio" value="image" autocomplete="off"> IMG
+                </label>
               <label class="btn btn-secondary">
                 <input type="radio" value="blur" autocomplete="off"> BLUR
               </label>
@@ -82,6 +92,13 @@
             <div class="slidecontainer"><input type="range" min="50" max="300" value="100" class="slider" id="zoomSlider"></div>
           </div>
 
+          <div class="row refine-edge-wrapper">
+            <div class="label">
+              REFINE EDGE: <span class="refine-edge-value"></span>
+            </div>  
+            <div class="slidecontainer"><input type="range" min="0" max="60" value="100" class="slider" id="refineEdgeSlider"></div>
+          </div>
+
           <div class="row blur-wrapper">
             <div class="label">
               BLUR RADIUS: <span class="blur-radius-value"></span>
@@ -89,11 +106,22 @@
             <div class="slidecontainer"><input type="range" min="0" max="50" value="0" class="slider" id="blurSlider"></div>
           </div>
 
-          <div class="row color-picker-wrapper">
+          <div class="row color-picker-wrapper justify-content-center">
             <div class="label">
               BACKGROUND: <span class="bg-value"></span>
             </div> 
             <div id="color-picker-container"></div>
+          </div>
+
+          <div class="row select-bg-wrapper justify-content-center">
+            <div class="label">
+              <label class="btn btn-outline-primary btn-sm">
+                Select Background <input type="file" id="chooseBackground" accept="image/*" hidden>
+              </label>
+              <button id="clearBackground" class="btn btn-outline-secondary btn-sm">
+                Clear Background
+              </button>
+            </div> 
           </div>
 
           <div class="row color-map-alpha-wrapper">
@@ -104,13 +132,6 @@
           </div>
 
           <div class="row labels-wrapper">
-          </div>
-        </div>
-
-        <div class="col-md-12 col-lg-8 offset-lg-2" align="center">
-          <div class="row">
-            <div id="inferenceTime" class="col" align="center">
-            </div>
           </div>
         </div>
       </div>
@@ -127,7 +148,10 @@
     <script src="../util/tflite/schema/schema_generated.js"></script>
     <script src="../util/tflite/TfLiteModelUtils.js"></script>
     <script src="../util/tflite/TFliteModelImporter.js"></script>
-    <script src="DrawOutputs.js"></script>
+    <script src="src/WebGLUtils.js"></script>
+    <script src="src/Shader.js"></script>
+    <script src="src/GuidedFilter.js"></script>
+    <script src="src/DrawOutputs.js"></script>
     <script src="utils.js"></script>
     <script src="main.js"></script>
     <script>
