--- a/examples/ssd_mobilenet/camera.html
+++ b/examples/ssd_mobilenet/camera.html
@@ -28,7 +28,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
       <span class="navbar-brand mb-0 h1">WebML SSD MobileNet Demo</span>
-      <div class="btn-group">
+      <div class="btn-group mr-1">
           <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Setting...
           </button>
@@ -38,7 +38,7 @@
             <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
           </div>
       </div>
-      <div class="btn-group prefer" style="margin-left: 5px; display: none;">
+      <div class="btn-group prefer" style="display: none;">
         <button id="selectPrefer" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Setting...
         </button>
