--- a/examples/posenet/camera.html
+++ b/examples/posenet/camera.html
@@ -45,7 +45,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
       <span class="navbar-brand mb-0 h1">WebML PoseNet Demo</span>
-      <div class="btn-group">
+      <div class="btn-group mr-1">
         <button id="backend" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Setting...
         </button>
@@ -55,13 +55,13 @@
           <button class="dropdown-item disabled" type="button" id="webml">WebML</button>
         </div>
       </div>
-      <div class="btn-group prefer" style="margin-left: 5px; display: none;">
+      <div class="btn-group prefer" style="display: none;">
           <button id="selectPrefer" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Setting...
           </button>
           <div class="dropdown-menu dropdown-menu-right preference">
           </div>
-        </div>
+      </div>
     </nav>
     <div class="container" id="container">
       <div id="progressContainer">
@@ -102,11 +102,11 @@
     <script src = "../third_party/dat.gui.js"></script>
     <script src = "gui.js"></script>
     <script src = "utils.js"></script>
-    <script src = "camera.js"></script>  
+    <script src = "camera.js"></script>
     <script>
       window.onload = function() {
         main();
       }
-    </script> 
+    </script>
   </body>
 </html>
